tests/invalid_types_unary_integer/main.oa
main()
{
    -false;
    ++false;
    --false;
    false++;
    false--;
}